# bant

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  BUILD  MODULE.bazel  Makefile  README.md  WORKSPACE  WORKSPACE.bzlmod  arena-container.h  arena-container_test.cc  arena.h  ast.cc  ast.h  bant.cc  file-utils.cc  file-utils.h  linecolumn-map.cc  linecolumn-map.h  linecolumn-map_test.cc  parser.cc  parser.h  parser_test.cc  project-parser.cc  project-parser.h  query-utils.cc  query-utils.h  scanner.cc  scanner.h  scanner_test.cc  shell.nix  tool-dwyu.cc  tool-dwyu.h  tool-dwyu_test.cc  tool-header-providers.cc  tool-header-providers.h  types-bazel.cc  types-bazel.h  types-bazel_test.cc
.github/workflows/: ci.yml
bant/: BUILD  bant.cc  builtin-macros.bnt  cli-commands.cc  cli-commands.h  module-version.bzl  output-format.h  session.h  types-bazel.cc  types-bazel.h  types-bazel_test.cc  types.h  workspace.cc  workspace.h
bant/explore/: BUILD  aliased-by.cc  aliased-by.h  cross-reference.cc  cross-reference.h  dependency-graph.cc  dependency-graph.h  header-providers.cc  header-providers.h  header-providers_test.cc  index-printing.cc  index-printing.h  project-indexing.cc  project-indexing.h  project-indexing_test.cc  query-utils.cc  query-utils.h  query-utils_test.cc
bant/frontend/: BUILD  ast.cc  ast.h  elaboration-factories.h  elaboration.cc  elaboration.h  elaboration_test.cc  linecolumn-map.cc  linecolumn-map.h  (+31 more)
bazel/: BUILD  re2.patch
scripts/: before-submit.sh  create-workspace-status.sh  make-compilation-db.sh  run-clang-tidy-cached.cc  run-format.sh
(+69 files in other folders)
